# OsxPpcEmu

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: ApiDispatch.hpp  CDebugger.hpp  CGdbServer.hpp  CHeap.hpp  CMachoLoader.hpp  CMemory.hpp  COsxPpcEmu.hpp  Common.hpp  ImportDispatch.hpp  PpcStructures.hpp
include/shims/: ShimContext.hpp
include/shims/carbon/: CarbonShims.hpp
include/shims/dyld/: DyldShims.hpp
include/shims/libc/: LibcShims.hpp
src/: CDebugger.cpp  CGdbServer.cpp  CHeap.cpp  CMachoLoader.cpp  CMemory.cpp  COsxPpcEmu.cpp  Common.cpp  ImportDispatch.cpp  main.cpp
src/shims/carbon/: CarbonShims.cpp
src/shims/dyld/: DyldShims.cpp
src/shims/libc/: LibcShims.cpp
test/: CMakeLists.txt
test/src/: test.cpp  test_bsearch.cpp  test_qsort.cpp
